Fix(core): Minor ui issues
- Changes in Sidebar
- Add error boundary to show msg when filtered results are empty
- Customised scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,3 +91,24 @@
 [class*="style-module_"] {
 	flex-direction: row !important;
 }
+
+/* width */
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #999;
+	border-radius: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #666;
+}
